--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,8 @@ body::-webkit-scrollbar {
 	width: 100%;
 	height: 100vh;
 	/* background-image: url("../assets/misato-walk.gif"); */
-	background-size: cover;
-	background-position: center;
+	/* background-size: cover; */
+	/* background-position: center; */
 
 	position: relative;
 	overflow: hidden;
@@ -211,6 +211,7 @@ h2 {
 
 	p {
 		font-size: 1.75rem;
+		width: 50ch;
 	}
 }
 
