--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body::-webkit-scrollbar {
 	display: none;
 }
 
-.hero video {
+.hero video, .hero img {
 	position: absolute;
 	z-index: -1;
 	object-fit: cover;
@@ -38,9 +38,6 @@ body::-webkit-scrollbar {
 	padding: 0px;
 	width: 100%;
 	height: 100vh;
-	/* background-image: url("../assets/misato-walk.gif"); */
-	/* background-size: cover; */
-	/* background-position: center; */
 
 	position: relative;
 	overflow: hidden;
@@ -61,7 +58,6 @@ a {
 .hero-content {
 	width: 100%;
 	height: 100%;
-	backdrop-filter: brightness(36%);
 	background: linear-gradient(0deg, var(--background-primary), transparent);
 	padding: 1px;
 	display: flex;
@@ -209,7 +205,7 @@ h2 {
 }
 
 @media screen and (min-width: 1920px) {
-	.primary-nav {
+	.primary-nav, h2 {
 		font-size: 1.75rem;
 	}
 
@@ -219,7 +215,20 @@ h2 {
 
 	p {
 		font-size: 1.75rem;
-		width: 50ch;
+	}
+}
+
+@media screen and (min-width: 2000px) {
+	.primary-nav, h2 {
+		font-size: 2.75rem;
+	}
+
+	h1 {
+		font-size: 4.25rem;
+	}
+
+	p {
+		font-size: 1.75rem;
 	}
 }
 
