--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url(../fonts/Poppins-Medium.ttf);
+}
+
 :root {
 	--background-primary: #101012;
 	--background-secondary: #141417;
@@ -18,7 +23,7 @@ html {
 body {
 	background-color: var(--background-primary);
 	color: var(--foreground-primary);
-	font-family: 'IBM Plex Sans', sans-serif;
+	font-family: 'Poppins-Medium', sans-serif;
 }
 
 body::-webkit-scrollbar {
@@ -58,6 +63,7 @@ a {
 .hero-content {
 	width: 100%;
 	height: 100%;
+	backdrop-filter: brightness(0.75);
 	background: linear-gradient(0deg, var(--background-primary), transparent);
 	padding: 1px;
 	display: flex;
@@ -242,7 +248,7 @@ h2 {
 	}
 }
 
-@media screen and (max-width: 336px) {
+@media screen and (max-width: 376px) {
 	.primary-nav {
 		flex-direction: column;
 		gap: 1.5rem;
