--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 }
 
 :root {
-	--background-primary: #101012;
-	--background-secondary: #141417;
+	--background-primary: #141417;
+	--background-secondary: #101012;
 	--background-secondary-alt: #1c1c1f;
 	--foreground-primary: #e1e1e1;
 	--accent: #e91e63;
@@ -54,7 +54,7 @@ body::-webkit-scrollbar {
 	text-align: center;
 }
 
-#socials {
+#hero-socials {
 	margin-top: 1.5rem;
 
 	display:flex;
@@ -122,7 +122,7 @@ a {
 	font-weight: bolder;
 }
 
-#socials a:hover {
+#hero-socials a:hover {
 	color: var(--accent);
 }
 .hero-content .button {
@@ -146,7 +146,7 @@ section {
 }
 
 footer {
-	background-color: var(--background-secondary);
+	background-color: var(--background-secondary-alt);
 	margin: 0px;
 	padding: 1.25rem .5rem;
 	opacity: 65%;
@@ -175,14 +175,19 @@ td {
 }
 
 highlight {
+	background: linear-gradient(#e9457d, #e91e63);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 	font-weight: bolder;
-	color: var(--accent);
 }
 
 h2 {
-	border-bottom: 4px solid var(--accent);
 	width: fit-content;
 	margin: 1.25rem 0rem;
+	text-decoration: underline;
+  text-decoration-thickness: 4px;
+  text-underline-offset: 9px;
+  text-decoration-color: var(--accent);
 }
 
 .code {
@@ -223,6 +228,51 @@ h2 {
 	height: 36px;
 	padding: 12px;
 }
+
+.project-cards {
+	margin-top: 1rem;
+}
+
+.project-card {
+	border-radius: .25rem;
+	height: 230px;
+	max-width: 360px;
+}
+
+#dotfiles {
+	background-image: url("../background.svg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.project-content {
+	padding: 12px;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	justify-content: center;
+	/* align-content: center; */
+	background: linear-gradient(0deg, var(--background-secondary), 100%, transparent);
+	backdrop-filter: brightness(0.65);
+	height:-webkit-fill-available;
+	transition: all 1.3s ease-in-out;
+}
+
+.project-content:hover {
+	background: linear-gradient(0deg, var(--background-secondary), 70%, transparent);
+	transition: all 1.3s ease-in-out;
+	justify-content: end;
+}
+
+.project-card h3 {
+	color: var(--accent);
+}
+
+.project-card p {
+	font-size: 0.85rem;
+}
+
 
 @media screen and (min-width: 1920px) {
 	.primary-nav, h2 {
@@ -271,7 +321,7 @@ h2 {
 		flex-wrap: wrap;
 	}
 
-	#socials {
+	#hero-socials {
 		flex-wrap: wrap;
 		align-items: center;
 	}
