--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,8 +5,8 @@ import Fauux from '@assets/buttons/fauux-btn-01.gif'
 
 <footer class="px-3 py-6 bg-zinc-900">
   <div class="flex gap-6 justify-center py-2">
-    <a href="http://fauux.neocities.org/"><img src={Fauux} alt="button" width="100%" height="100%"></a>
-    <a href="http://wiby.me/"><img src={Wiby} alt="button" width="100%" height="100%"></a>
+    <a href="http://fauux.neocities.org/"><img src={Fauux.src} alt="button" width="100%" height="100%"></a>
+    <a href="http://wiby.me/"><img src={Wiby.src} alt="button" width="100%" height="100%"></a>
   </div>
   <div class="text-center text-[18px] text-stone-400 font-semibold font-poppins">
     © 2023 Shivam Shekhar Soy
