--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -5,7 +5,7 @@ import Resume from '@assets/resume.svg'
 import { Socials } from '@constants/socials'
 ---
 
-<img src={Gits} class="absolute h-[100%] w-[100%] object-cover -z-40"></img>
+<img src={Gits.src} class="absolute h-[100%] w-[100%] object-cover -z-40" height="100%" width="100%"></img>
 
 <section id="hero-section" class="backdrop-blur-sm backdrop-brightness-50 h-[80vh] max-h-[720px] max-w-xl sm:max-w-full mx-auto pt-[45%] sm:pt-[150px] bg-gradient-to-t from-[#1a232e] to-transparent">  
   <content class="flex flex-col items-center text-center gap-8">
@@ -21,7 +21,7 @@ import { Socials } from '@constants/socials'
     <p class="text-lg font-extrabold font-poppins text-blue-100 border-2 border-blue-100 rounded-xl py-3 px-5 cursor-pointer">
       <a class=" flex align-middle gap-3" href="/under-construction">
         <span>Resume</span>
-        <img src={Resume} class="h-6"></img>
+        <img src={Resume.src} class="h-6" height="1.5rem" width="auto"></img>
       </a>
     </p>
   </content>
