fix: resize Paz WIP image to prevent overlapping in smaller devices

--- a/src/pages/under-construction.astro
+++ b/src/pages/under-construction.astro
@@ -33,7 +33,7 @@ import '../base.css'
           This page is still under construction.<br />
           <a class="underline hover:text-[#bd9f43] hover:bg-[#3a3532]" href="/">Click here to go back to Home page.</a>
         </p>
-        <img src={WIP.src} class="absolute bottom-0 right-0 -z-10"/>
+        <img src={WIP.src} height="300px" class="max-h-[300px] absolute bottom-0 right-0 -z-10"/>
 			</div>
 		</section>
     <div class="bg-[url('/tape.png')] h-[8px] absolute w-[100%] -bottom-0 -z-40"></div>
