--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -7,7 +7,7 @@ import { Socials } from '@constants/socials'
 
 <img src={Gits.src} class="absolute h-[100%] w-[100%] object-cover -z-40" height="100%" width="100%"></img>
 
-<section id="hero-section" class="backdrop-blur-sm backdrop-brightness-50 h-[80vh] max-h-[720px] max-w-xl sm:max-w-full mx-auto pt-[45%] sm:pt-[150px] bg-gradient-to-t from-[#1a232e] to-transparent">  
+<section id="hero-section" class="backdrop-blur-sm backdrop-brightness-50 h-[80vh] min-h-[650px] max-h-[720px] max-w-xl sm:max-w-full mx-auto pt-[45%] sm:pt-[150px] bg-gradient-to-t from-[#1a232e] to-transparent">  
   <content class="flex flex-col items-center text-center gap-8">
     <h1 class="text-8xl font-jost font-extrabold">Hi, I'm <span class="bg-clip-text text-[#ffffff11] bg-gradient-to-r from-pink-500 to-violet-500">Shivam</span>.   </h1>
     <p class="font-bold text-stone-400 text-xl">Student | Programmer | FOSS Enjoyer</p>
