--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -5,7 +5,7 @@ import Resume from '@assets/resume.svg'
 import { Socials } from '@constants/socials'
 ---
 
-<img src={Gits.src} class="absolute h-[100%] w-[100%] object-cover -z-40" height="100%" width="100%"></img>
+<img src={Gits.src} class="absolute min-h-[665px] h-[100%] w-[100%] object-cover -z-40" height="100%" width="100%"></img>
 
 <section id="hero-section" class="backdrop-blur-sm backdrop-brightness-50 h-[80vh] min-h-[650px] max-h-[720px] max-w-xl sm:max-w-full mx-auto pt-[45%] sm:pt-[150px] bg-gradient-to-t from-[#1a232e] to-transparent">  
   <content class="flex flex-col items-center text-center gap-8">
