--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,17 +1,14 @@
 ---
 import '../base.css'
 import DropdownMenu from './DropdownMenu';
-
-
 ---
-
 <nav class="w-[100%] text-stone-300 mx-auto font-bold text-lg backdrop-blur-md top-0 z-10 border-b-[1px] border-slate-50/[0.06] fixed">
   <div class="flex justify-between px-6 py-3 sm:py-1 max-w-6xl mx-auto flex-wrap align-middle">
     <div class=" py-2"><a href="/" class="cursor-pointer">SamIsTheFBI</a></div>
     <div class="flex gap-6 align-middle sm:py-2">
       <!-- <button>🌙</button> -->
       <ul class="hidden sm:flex gap-6">
-        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="/#about" class="nav-link">About</a></li>
         <li><a href="/under-construction" class="nav-link">Projects</a></li>
         <li><a href="/blog" class="nav-link">Blog</a></li>
       </ul>
