--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,6 +3,8 @@ import BaseHead from '@components/BaseHead.astro'
 import NavBar from '@components/NavBar.astro'
 import Footer from '@components/Footer.astro'
 import FormattedDate from '@components/FormattedDate.astro'
+import '../base.css'
+import { Image } from 'astro:assets'
 
 const { title, author, description, pubDate, updatedDate, heroImage } = Astro.props
 ---
@@ -11,12 +13,24 @@ const { title, author, description, pubDate, updatedDate, heroImage } = Astro.pr
   <BaseHead title={title} description={description} />
   <body class="text-slate-300 bg-[#1a232e]">
     <NavBar />
-		<!-- <div class="bg-red-400 h-2 w-[calc(100vh-6px)] fixed top-[3.30rem]"></div> -->
-    <main class="mt-[65px] w-[100%] px-8 py-3 h-[100%]">
-			<article class="max-w-3xl mx-auto">
+    <main class="mt-[65px] w-[100%] px-8 py-3 pb-14 h-[100%]">
+			<section class="max-w-3xl mx-auto">
 				<span onclick="history.back()" class="font-poppins cursor-pointer font-bold hover:text-red-400 my-3">← Go Back</span>
-				{heroImage && <div class="my-6"><img loading="lazy" class="border-b-4 border-r-4 border-red-400 object-cover rounded-xl" width={1020} height={510} src={heroImage.url} alt={heroImage.alt} /> </div>}
-				<h1 class="text-6xl mt-3 mb-3 font-jost font-semibold">{title}</h1>
+				{
+					heroImage && 
+					<div class="my-6">
+						<Image 
+							class="border-b-4 border-r-4 border-red-400 object-cover rounded-xl" 
+							src={heroImage.url} 
+							width={1200} 
+							height={600} 
+							alt={heroImage.alt}
+							format='avif'
+							quality={30}
+						/>
+					</div>
+				}
+				<h1 class="text-6xl sm:text-7xl mt-3 mb-6 font-jost font-semibold text-white">{title}</h1>
 				<div class="text-stone-400 my-6 mt-3 border-y-2 border-slate-50/[0.06] py-2">
 					<div class="">By {author}</div>
 					<date class="flex items-center gap-1">
@@ -24,14 +38,16 @@ const { title, author, description, pubDate, updatedDate, heroImage } = Astro.pr
 						{
 							updatedDate && (
 								<div class="text-sm">
-									(last updated on <FormattedDate date={updatedDate} />)
+									( last updated on <FormattedDate date={updatedDate} />)
 								</div>
 							)
 						}
 					</date>
 				</div>
-				<slot />
-			</article>
+				<article class="prose prose-slate dark:prose-invert lg:prose-xl prose-h1:font-medium prose-img:border-2 prose-img:border-red-400 prose-h2:heading-underline prose-h2:underline-offset-8 sm:prose-h2:underline-offset-[10px]">
+					<slot />
+				</article>
+			</section>
 		</main>
     <Footer />
   </body>
