fix: Tailwind Prose dark mode

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -44,7 +44,7 @@ const { title, author, description, pubDate, updatedDate, heroImage } = Astro.pr
 						}
 					</date>
 				</div>
-				<article class="prose prose-slate dark:prose-invert lg:prose-xl prose-h1:font-medium prose-img:border-2 prose-img:border-red-400 prose-h2:heading-underline prose-h2:underline-offset-8 sm:prose-h2:underline-offset-[10px]">
+				<article class="prose-invert lg:prose-xl prose-h1:font-medium prose-img:border-2 prose-img:border-red-400 prose-h2:heading-underline prose-h2:underline-offset-8 sm:prose-h2:underline-offset-[10px]">
 					<slot />
 				</article>
 			</section>
