--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -25,11 +25,11 @@ import { Image } from 'astro:assets';
         ))
       }
     </ul>
-    <p class="text-lg font-extrabold font-poppins text-blue-100 border-2 border-blue-100 rounded-xl py-3 px-5 cursor-pointer">
-      <a class=" flex align-middle gap-3" href="/under-construction">
-        <span>Resume</span>
-        <img src={Resume.src} class="h-6" height="1.5rem" width="auto"></img>
-      </a>
-    </p>
+    <!-- <p class="text-lg font-extrabold font-poppins text-blue-100 border-2 border-blue-100 rounded-xl py-3 px-5 cursor-pointer"> -->
+    <!--   <a class=" flex align-middle gap-3" href="/under-construction"> -->
+    <!--     <span>Resume</span> -->
+    <!--     <img src={Resume.src} class="h-6" height="1.5rem" width="auto"></img> -->
+    <!--   </a> -->
+    <!-- </p> -->
   </content>
 </section>
