--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import { Image } from 'astro:assets';
 		<section id="i-love" class="w-[100%] px-8 py-3 bg-[#1a232e]">
 			<div class="max-w-3xl mx-auto">
 				<h1 class="heading-underline">I ❤️</h1>
-				<p class="text-[18px] text-stone-300 font-semibold font-poppins py-6">Art, <a class="normal-link" href="https://www.instagram.com/samisthefbi">Drawing</a>, Music, Movies, Linux, <a class="normal-link" href="https://myanimelist.net/profile/SamIsTheFBI">Anime</a>, Retro games.</p>
+				<p class="text-[18px] text-stone-300 font-semibold font-poppins py-6">Art, <a class="normal-link" href="https://www.instagram.com/samisthefbi">Drawing</a>, Music, Movies, Linux, Retro games.</p>
 			</div>
 		</section>
 		<Footer />
