--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,7 +3,7 @@ import { getCollection } from "astro:content";
 import NavBar from '@components/NavBar.astro'
 import Footer from '@components/Footer.astro'
 import BaseHead from "@components/BaseHead.astro";
-import FormattedDate from '../../components/FormattedDate.astro';
+import FormattedDate from '@components/FormattedDate.astro';
 import '../../base.css'
 import { Image } from "astro:assets";
 import BackButton from '@components/BackButton.astro';
