--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,20 @@
 ---
 import Wiby from '@assets/buttons/wiby.gif'
 import Fauux from '@assets/buttons/fauux-btn-01.gif'
+import { ImCircleLeft, ImCircleRight } from 'react-icons/im'
 ---
 
-<footer class="px-3 py-6 bg-zinc-900">
+<footer class="px-3 py-6 bg-zinc-900 text-center">
   <div class="flex gap-6 justify-center py-2">
     <a href="http://fauux.neocities.org/"><img src={Fauux.src} alt="button" width="100%" height="100%"></a>
     <a href="http://wiby.me/"><img src={Wiby.src} alt="button" width="100%" height="100%"></a>
   </div>
-  <div class="text-center text-[18px] text-stone-400 font-semibold font-poppins">
+  <div class="text-[18px] text-stone-400 font-semibold font-poppins">
     © 2023 Shivam Shekhar Soy
+  </div>
+  <div class="pt-6 flex items-center justify-between gap-6 text-stone-400 mx-auto px-3 max-w-md">
+      <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=prev" class="hover:text-red-400"><ImCircleLeft /></a>
+      <a href="https://gnulinuxindia.org/members.html/" class="hover:text-red-400 font-mono">GNU/LINUX INDIA WEBRING</a>
+      <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=next" class="hover:text-red-400"><ImCircleRight /></a>
   </div>
 </footer>
