--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import Wiby from '@assets/buttons/wiby.gif'
 import Fauux from '@assets/buttons/fauux-btn-01.gif'
-import { ImCircleLeft, ImCircleRight } from 'react-icons/im'
+import { AiFillCaretLeft, AiFillCaretRight } from 'react-icons/ai'
 ---
 
 <footer class="px-3 py-6 bg-zinc-900 text-center">
@@ -13,8 +13,8 @@ import { ImCircleLeft, ImCircleRight } from 'react-icons/im'
     © 2023 Shivam Shekhar Soy
   </div>
   <div class="pt-6 flex items-center justify-between gap-6 text-stone-400 mx-auto px-3 max-w-md">
-      <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=prev" class="hover:text-red-400"><ImCircleLeft /></a>
+      <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=prev" class="hover:text-red-400"><AiFillCaretLeft /></a>
       <a href="https://gnulinuxindia.org/members.html/" class="hover:text-red-400 font-mono">GNU/LINUX INDIA WEBRING</a>
-      <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=next" class="hover:text-red-400"><ImCircleRight /></a>
+      <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=next" class="hover:text-red-400"><AiFillCaretRight /></a>
   </div>
 </footer>
