feat: added Discord profile link

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -6,6 +6,7 @@ import { Socials } from '@constants/socials'
 import { Image } from 'astro:assets';
 import { PiGithubLogoBold, PiEnvelopeSimpleBold, PiLinkedinLogo } from 'react-icons/pi'
 import { RiTwitterXFill } from 'react-icons/ri'
+import { FaDiscord } from 'react-icons/fa6'
 ---
 
 <Image 
@@ -25,6 +26,7 @@ import { RiTwitterXFill } from 'react-icons/ri'
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="mailto:shivamshekharsoy@gmail.com"><PiEnvelopeSimpleBold /></a></li>
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://www.linkedin.com/in/samisthefbi/"><PiLinkedinLogo /></a></li>
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://twitter.com/SamIsTheFBI"><RiTwitterXFill /></a></li>
+      <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://discord.com/users/282149732707467274"><FaDiscord /></a></li>
     </ul>
     <!-- <p class="text-lg font-extrabold font-poppins text-blue-100 border-2 border-blue-100 rounded-xl py-3 px-5 cursor-pointer"> -->
     <!--   <a class=" flex align-middle gap-3" href="/under-construction"> -->
