--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -19,7 +19,7 @@ const {
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>{title} • SamIsTheFBI</title>
+  <title>{title} - SamIsTheFBI</title>
   <meta name="title" content={title} />
   <meta name="description" content={description} />
   <meta name="author" content={author} />
