--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -4,7 +4,7 @@ import DropdownMenu from './DropdownMenu';
 import { NavItems } from '@constants/menuItems'
 ---
 <nav class="w-[100%] text-stone-300 mx-auto font-bold text-lg backdrop-blur-md top-0 z-10 border-b-[1px] border-slate-50/[0.06] fixed">
-  <div class="flex justify-between px-6 py-3 sm:py-1 max-w-6xl mx-auto flex-wrap align-middle">
+  <div class="flex justify-between items-center px-6 py-3 sm:py-1 max-w-6xl mx-auto flex-wrap align-middle h-16">
     <div class="py-2"><a href="/" class="cursor-pointer font-mono">> SamIsTheFBI</a></div>
     <div class="flex gap-6 align-middle sm:py-2">
       <!-- <button>🌙</button> -->
