--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -25,12 +25,11 @@ import '../base.css'
     <div class="bg-[url('/tape.png')] h-[55px]"></div>
 		<section id="i-love" class="w-[100%] px-8 py-3 text-[#3a3532]">
 			<div class="max-w-3xl mx-auto ">
-        <h1 class="text-xl font-poppins font-extrabold border-y-2 border-[#3a3532] max-w-fit">Work in Progress</h1>
+        <h1 class="text-xl font-poppins font-extrabold border-y-2 border-[#3a3532] max-w-fit">404 Page not Found</h1>
 				<p class="text-[18px] font-semibold font-poppins py-6">
-          Please pardon the inconvenience.
+          Seems like you've strayed too far.
         </p>
         <p class="text-[18px] font-semibold font-poppins">
-          This page is still under construction.<br />
           <a class="underline hover:text-[#bd9f43] hover:bg-[#3a3532]" href="/">Click here to go back to Home page.</a>
         </p>
         <img src={WIP.src} height="300px" class="max-h-[300px] absolute bottom-0 right-0 -z-10"/>
@@ -39,3 +38,4 @@ import '../base.css'
     <div class="bg-[url('/tape.png')] h-[8px] absolute w-[100%] -bottom-0 -z-40"></div>
 	</body>
 </html>
+
