--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,7 +7,7 @@ import FormattedDate from '@components/FormattedDate.astro';
 import '../../base.css'
 import { Image } from "astro:assets";
 import BackButton from '@components/BackButton.astro';
-import { BiCalendar } from 'react-icons/bi/index'
+import { BiCalendar } from 'react-icons/bi'
 
 const posts = (await getCollection("blog"))
   .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
