--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,28 @@
 ---
-import Wiby from '@assets/buttons/wiby.gif'
-import Fauux from '@assets/buttons/fauux-btn-01.gif'
 import { AiFillCaretLeft, AiFillCaretRight } from 'react-icons/ai'
+
+const getCopyLeftYear = async() => {
+  const res = await fetch("https://api.github.com/repos/samisthefbi/samisthefbi.github.io") /* TODO: Don't hardcode this maybe */
+  const data = await res.json()
+
+  const date = new Date()
+  const currentYear = date.getFullYear()
+  const createdYear = data.created_at.substring(0, data.created_at.indexOf('-'))
+  const updatedYear = data.updated_at.substring(0, data.created_at.indexOf('-'))
+  
+  const copyLeftYear = currentYear === updatedYear ? `${currentYear}` : `${createdYear}-${updatedYear}`
+  return copyLeftYear
+}
+
+const copyLeftYear = getCopyLeftYear()
+
 ---
 
 <div class="px-3 text-center text-sm h-16 flex-col justify-center items-center">
-  © 2023 <a href="/" class="underline underline-offset-4 hover:text-stone-200">Shivam Shekhar Soy</a>.
+  🄯 <a target="_blank" href="https://www.gnu.org/licenses/copyleft.en.html" class="hover:underline underline-offset-4 hover:text-stone-200">Copyleft</a>{' '}{copyLeftYear}{' '}<a href="/" class="underline underline-offset-4 hover:text-stone-200">Shivam Shekhar Soy</a>.
   <div class="flex items-center justify-between gap-6 mx-auto px-3 pt-2 max-w-md">
       <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=prev" class="hover:text-red-400"><AiFillCaretLeft /></a>
-      <a href="https://gnulinuxindia.org/members.html/" class="font-mono">GNU/LINUX INDIA WEBRING</a>
+      <a target="_blank" href="https://gnulinuxindia.org/members.html/" class="font-mono hover:text-stone-200 hover:underline underline-offset-4">GNU/LINUX INDIA WEBRING</a>
       <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=next" class="hover:text-red-400"><AiFillCaretRight /></a>
   </div>
 </div>
