--- a/src/base.css
+++ b/src/base.css
@@ -11,6 +11,22 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1A232E; 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 :root {
   --header-height: 64px;
   --footer-height: 64px;
@@ -71,7 +87,7 @@ html {
   }
 
   .heading-underline {
-    @apply font-poppins text-lg font-extrabold underline sm:underline-offset-[9px] decoration-4 decoration-red-400
+    @apply font-poppins font-extrabold underline sm:underline-offset-[9px] decoration-4 decoration-red-400
   }
 
   .normal-link {
