--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -3,7 +3,6 @@ import '../base.css'
 import Gits from '../assets/gits.jpg'
 import Resume from '@assets/resume.svg'
 import { Socials } from '@constants/socials'
-import { Image } from 'astro:assets';
 import { PiGithubLogoBold, PiEnvelopeSimpleBold, PiLinkedinLogo } from 'react-icons/pi'
 import { RiTwitterXFill } from 'react-icons/ri'
 import { FaDiscord } from 'react-icons/fa6'
@@ -32,7 +31,7 @@ import { FaDiscord } from 'react-icons/fa6'
     <ul class="flex gap-6 text-3xl font-bold text-stone-300 items-center">
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://github.com/samisthefbi/"><PiGithubLogoBold /></a></li>
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="mailto:shivamshekharsoy@gmail.com"><PiEnvelopeSimpleBold /></a></li>
-      <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://www.linkedin.com/in/samisthefbi/"><PiLinkedinLogo /></a></li>
+      <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://www.linkedin.com/in/shivam-shekhar-soy/"><PiLinkedinLogo /></a></li>
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://twitter.com/SamIsTheFBI"><RiTwitterXFill /></a></li>
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://discord.com/users/282149732707467274"><FaDiscord /></a></li>
     </ul>
