feat: add about page

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -2,8 +2,7 @@
 import '../base.css'
 import Gits from '../assets/gits.jpg'
 import Resume from '@assets/resume.svg'
-import { Socials } from '@constants/socials'
-import { PiGithubLogoBold, PiEnvelopeSimpleBold, PiLinkedinLogo } from 'react-icons/pi'
+import { PiGithubLogoBold, PiEnvelopeSimpleBold, PiLinkedinLogo, PiInstagramLogoBold } from 'react-icons/pi'
 import { RiTwitterXFill } from 'react-icons/ri'
 import { FaDiscord } from 'react-icons/fa6'
 ---
@@ -27,13 +26,13 @@ import { FaDiscord } from 'react-icons/fa6'
       />
     </div>
     <h1 class="text-6xl font-jost font-extrabold">Hi, I'm <span class="bg-clip-text text-[#ffffff11] bg-gradient-to-r from-pink-500 to-violet-500">Shivam</span>.</h1>
-    <p class="font-bold text-stone-400 text-xl">Student | Programmer | FOSS Enjoyer</p>
     <ul class="flex gap-6 text-3xl font-bold text-stone-300 items-center">
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://github.com/samisthefbi/"><PiGithubLogoBold /></a></li>
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="mailto:shivamshekharsoy@gmail.com"><PiEnvelopeSimpleBold /></a></li>
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://www.linkedin.com/in/shivam-shekhar-soy/"><PiLinkedinLogo /></a></li>
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://twitter.com/SamIsTheFBI"><RiTwitterXFill /></a></li>
       <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://discord.com/users/282149732707467274"><FaDiscord /></a></li>
+      <li class="cursor-pointer hover:scale-125 transition-all duration-300"><a href="https://www.instagram.com/samisthefbi/"><PiInstagramLogoBold /></a></li>
     </ul>
     <div class="flex gap-3">
       <a 
