--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,11 +22,11 @@ const copyLeftYear = getCopyLeftYear()
 
 ---
 
-<div class="px-3 text-center text-sm h-16 flex-col justify-center items-center">
+<footer class="px-3 text-center text-sm h-16 flex-col justify-center items-center font-manrope">
   🄯 <a target="_blank" href="https://www.gnu.org/licenses/copyleft.en.html" class="hover:underline underline-offset-4 hover:text-stone-200">Copyleft</a>{' '}{copyLeftYear}{' '}<a href="/" class="underline underline-offset-4 hover:text-stone-200">Shivam Shekhar Soy</a>.
   <div class="flex items-center justify-between gap-6 mx-auto px-3 pt-2 max-w-md">
       <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=prev" class="hover:text-red-400"><AiFillCaretLeft /></a>
       <a target="_blank" href="https://gnulinuxindia.org/members.html/" class="font-mono hover:text-stone-200 hover:underline underline-offset-4">GNU/LINUX INDIA WEBRING</a>
       <a href="https://gnulinuxindia.org/direct.html?name=shivam&dir=next" class="hover:text-red-400"><AiFillCaretRight /></a>
   </div>
-</div>
+</footer>
