fix: back button

--- a/src/components/BackButton.astro
+++ b/src/components/BackButton.astro
@@ -2,7 +2,7 @@
 import { BiArrowBack } from 'react-icons/bi'
 ---
 
-<button class="flex items-center cursor-pointer gap-2 border-[1px] border-slate-50/[0.06] rounded-md transition-all duration-75 ease-in-out hover:shadow-sm hover:shadow-gray-50/[0.26] px-5 w-fit">
+<button onclick="history.back()" class="flex items-center cursor-pointer gap-2 border-[1px] border-slate-50/[0.06] rounded-md transition-all duration-75 ease-in-out hover:shadow-sm hover:shadow-gray-50/[0.26] px-5 w-fit">
   <BiArrowBack size={12}/>
   <span class="text-xs font-poppins font-bold my-2">Go Back</span>
 </button>
