--- a/src/base.css
+++ b/src/base.css
@@ -34,7 +34,7 @@ html {
 }
 
 .main-height {
-  min-height: calc(100vh - var(--header-height) - var(--footer-height));
+  min-height: calc(100dvh - var(--header-height) - var(--footer-height));
 }
 
 .that-effect {
