--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,7 +1,6 @@
 ---
 import '../base.css'
 import Gits from '../assets/gits.jpg'
-import Resume from '@assets/resume.svg'
 import { PiGithubLogoBold, PiEnvelopeSimpleBold, PiLinkedinLogo, PiInstagramLogoBold } from 'react-icons/pi'
 import { RiTwitterXFill } from 'react-icons/ri'
 import { FaDiscord } from 'react-icons/fa6'
@@ -36,10 +35,16 @@ import { FaDiscord } from 'react-icons/fa6'
     </ul>
     <div class="flex gap-3">
       <a 
-        class="px-4 py-2 border rounded-md border-slate-50/[0.3] active:bg-gradient-to-r hover:cursor-pointer active:from-pink-500 active:to-violet-500 hover:shadow-red-400 hover:shadow-sm"
+        class="px-4 py-2 border rounded-md border-slate-50/[0.3] hover:cursor-pointer hover:shadow-red-400 hover:shadow-sm"
         href="/about"
       >
         About Me
+      </a>
+      <a 
+        class="px-4 py-2 border rounded-md border-slate-50/[0.3] text-white bg-slate-50/[0.3] active:bg-gradient-to-r hover:cursor-pointer active:from-pink-500 active:to-violet-500 hover:shadow-red-400 hover:shadow-sm"
+        href="/ShivamShekharSoy_Resume.pdf"
+      >
+        Resume
       </a>
     </div>
   </content>
