fix: add drive link to resume

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -42,7 +42,7 @@ import { FaDiscord } from 'react-icons/fa6'
       </a>
       <a 
         class="px-4 py-2 border rounded-md border-slate-50/[0.3] text-white bg-slate-50/[0.3] active:bg-gradient-to-r hover:cursor-pointer active:from-pink-500 active:to-violet-500 hover:shadow-red-400 hover:shadow-sm"
-        href="/ShivamShekharSoy_Resume.pdf"
+        href="https://drive.google.com/file/d/1syWr-chgvH2kG-zps-kOX4Zf9CcwrkSG/view?usp=sharing"
       >
         Resume
       </a>
